# langchain-test-sample-20240513

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: generate_markdown_recipe_chain.py  generate_pydantic_recipe_chain.py  generate_recipe_chain.py
tests/: test_generate_markdown_recipe_chain.py  test_generate_pydantic_recipe_chain.py  test_generate_recipe_chain.py  test_langsmith_unit_tests.py
